logic tests passing; cli and gui skeletons

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,10 @@
 {
     "cSpell.words": [
+        "Criss",
+        "KEYDOWN",
+        "MOUSEBUTTONUP",
         "pygame",
-        "qwirkle"
+        "qwirkle",
+        "vernum"
     ]
 }
