Minor renaming, config enhancement, add ComponentDisplayAdapter concept, allow overriding default colors and shapes in config

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,15 @@
 {
     "cSpell.words": [
+        "blit",
+        "bottomleft",
+        "bottomright",
         "Criss",
         "KEYDOWN",
         "MOUSEBUTTONUP",
+        "padx",
+        "pady",
         "pygame",
         "qwirkle",
         "vernum"
-    ]
+    ],
 }
