--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,4 +12,9 @@
         "qwirkle",
         "vernum"
     ],
+    "python.testing.pytestArgs": [
+        "tests"
+    ],
+    "python.testing.unittestEnabled": false,
+    "python.testing.pytestEnabled": true,
 }
