Automate generating coverage report in README.md

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,9 @@
         "qwirkle",
         "vernum"
     ],
+    "files.associations": {
+        "*.md.in": "markdown"
+    },
     "python.testing.pytestArgs": [
         "tests"
     ],
