--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,6 +54,9 @@ flake8.cmd = "flake8 src/ tests/"
 mypy.cmd = "mypy src/ tests/"
 test.cmd = "pytest"
 testcov.cmd = "pytest --cov=qwirkle --cov-report xml:coverage.xml --cov-report term"
+testcov.help = "Produce test coverage xml and term reports"
+readmecov.shell = "pytest --cov=qwirkle --cov-report=term | sed -n '/--------/,/^TOTAL/p'"
+readmecov.help = "Produce test coverage text snippet for docs/README.md.in"
 tox.cmd = "tox"
 
 [tool.autopep8]
