--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,11 @@ authors = [{ name = "Kevin McWhirter", email = "klmcw@yahoo.com" }]
 license = { text = "MIT" }
 readme = "README.md"
 
-requires-python = ">=3.12"
+requires-python = ">=3.11,<3.12"
 
-dependencies = ["pygame-ce>=2.4.0"]
+dependencies = [
+    "pygame-ce>=2.4.1",
+]
 
 [project.urls]
 Homepage = "https://github.com/klmcwhirter/qwirkle"
@@ -31,11 +33,11 @@ write_template = "__version__ = '{}'"
 
 [tool.pdm.dev-dependencies]
 dev = [
-    "autopep8>=2.0.4",
-    "pytest>=8.0.1",
-    "pytest-cov>=4.1.0",
-    "mypy>=1.9.0",
+    "autopep8>=2.1.0",
     "flake8>=7.0.0",
+    "mypy>=1.9.0",
+    "pytest>=8.1.1",
+    "pytest-cov>=4.1.0",
     "tox>=4.14.1",
     "tox-gh-actions>=3.2.0",
     "tox-pdm>=0.7.2",
